--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <body>
     Ejemplo de git
     <h1>Título de la página</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam saepe ex aspernatur provident natus totam deleniti quia nesciunt tempore neque, voluptates esse facere! Recusandae pariatur qui nobis veniam in neque?</p>
 </body>
 </html>
